# RoboticsWalker

./: README.md
.claude/: settings.local.json
src/guideBot/: package.xml  setup.cfg  setup.py
src/guideBot/config/: turtlebot3_lds_2d.lua
src/guideBot/launch/: launch.py
src/guideBot/maps/: map.yaml
src/guideBot/nodes/: guide_announcer.py  teleop_game.py  wanderer.py  waypoint_navigator.py
src/guideBot/rviz/: guide_robot.rviz
src/guideBot/worlds/: guide_house.world
src/guide_robot/: package.xml  setup.cfg  setup.py
src/guide_robot/config/: turtlebot3_lds_2d.lua
src/guide_robot/guide_robot/: teleop_game.py  wanderer.py  waypoint_navigator.py
src/guide_robot/launch/: guide_house.launch.py  guide_robot.launch.py
src/guide_robot/maps/: map.pgm  map.yaml
src/guide_robot/worlds/: guide_house.world
src/guide_robot_interfaces/: CMakeLists.txt  package.xml
src/guide_robot_interfaces/msg/: RobotMode.msg
src/walkerproj/: package.xml  setup.cfg  setup.py
src/walkerproj/launch/: ProjectLaunch.py
src/walkerproj/walkerproj/: myPose.py
